@@ -61,7 +61,7 @@ public class Recording {
 		try {
 			this.duration = json.get("duration").getAsDouble();
 		} catch (Exception e) {
-			this.duration = new Long((long) json.get("duration").getAsLong()).doubleValue();
+			this.duration = Long.valueOf((long) json.get("duration").getAsLong()).doubleValue();
 		}
 		if (json.get("url").isJsonNull()) {
 			this.url = null;
@@ -191,6 +191,7 @@ public class Recording {
 	public JsonObject toJson() {
 		JsonObject json = new JsonObject();
 		json.addProperty("id", this.id);
+		json.addProperty("object", "recording");
 		json.addProperty("name", this.recordingProperties.name());
 		json.addProperty("outputMode", this.getOutputMode().name());
 		if (RecordingUtils.IS_COMPOSED(this.recordingProperties.outputMode()) && this.hasVideo) {
